# error-translator

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  justfile  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: analyze.py  followup.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  analysis.py  analysis_message.py  password_reset_code.py  user.py
backend/app/modules/analyses/: dependencies.py  prompting.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/analysis/: router.py  service.py
backend/app/modules/auth/: dependencies.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/modules/followups/: router.py  schemas.py  service.py
backend/app/schemas/: ai_response.py
backend/app/services/ai/: client.py  errors.py
backend/app/services/analysis/: __init__.py  detect_language.py  normalize.py
backend/app/services/email/: sender.py
backend/tests/: test_health.py
backend/tests/api/: test_analyze_endpoint.py  test_auth_endpoint.py  test_followup_endpoint.py  test_smoke.py
backend/tests/integration/: test_analyze.py  test_followup.py
backend/tests/schemas/: __init__.py  test_ai_response.py
backend/tests/services/: test_ai_client.py  test_prompts_registry.py
backend/tests/services/analysis/: test_detect_language.py  test_normalize.py
(+46 files in other folders)
